新增权限页面curd

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -189,3 +189,14 @@ aside {
 .multiselect--active {
   z-index: 1000 !important;
 }
+
+
+
+[class^="el-icon-fa"], [class*=" el-icon-fa"] {
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome !important;
+  font-size: inherit;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
