--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -200,3 +200,10 @@ aside {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.table-th{
+  text-align: center !important;
+  background: #d7d7d7 !important;
+  height: 40px;
+  padding: 0;
+  color: #1f2d3d;
+}
