--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -207,3 +207,112 @@ aside {
   padding: 0;
   color: #1f2d3d;
 }
+
+
+//refine vue-multiselect plugin
+.multiselect {
+  line-height: 16px;
+}
+
+.multiselect--active {
+  z-index: 1000 !important;
+}
+
+[class^="el-icon-fa"], [class*=" el-icon-fa"] {
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome !important;
+  font-size: inherit;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.table-th{
+  text-align: center !important;
+  background: #eef1f6 !important;
+  height: 40px;
+  padding: 0;
+  color: #1f2d3d;
+}
+.cell-style{
+  text-align: center !important;
+}
+.span-header{
+  position: relative;
+  display: -webkit-box;
+  height: 44px;
+  background: #eef1f6;
+  /* text-align: center; */
+  align-items: center;
+  border: 1px solid #dfe6ec;
+  padding-left: 10px;
+  padding-right: 10px;
+  box-sizing: border-box;
+  width: 100%;
+  button{
+    position:absolute;
+    right: 10px;
+    top: 8px;
+  }
+}
+.el-scrollbar__wrap{
+  overflow: auto !important;
+}
+
+/*chrome--------------------------------------------start*/
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+/* Track */
+::-webkit-scrollbar-track {
+  background: rgb(255, 255, 255);
+  border-radius: 8px;
+}
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(201, 201, 202);
+  border-radius: 8px;
+}
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(162, 162, 163);
+}
+.el-menu::-webkit-scrollbar,
+.el-table__body-wrapper::-webkit-scrollbar {
+  display: none;
+}
+.el-menu:hover::-webkit-scrollbar,
+.el-table__body-wrapper:hover::-webkit-scrollbar {
+  display: block;
+}
+/*chrome--------------------------------------------end*/
+/*IE--------------------------------------------start*/
+*{
+  /*三角箭头的颜色*/
+  scrollbar-arrow-color: #c0c4cc;
+  /*滚动条滑块按钮的颜色*/
+  scrollbar-face-color: #A2A2A3;
+  /*滚动条整体颜色*/
+  scrollbar-highlight-color: #A2A2A3;
+  /*滚动条阴影*/
+  scrollbar-shadow-color: #A2A2A3;
+  /*滚动条轨道颜色*/
+  scrollbar-track-color: #f4f4f5;
+  /*滚动条3d亮色阴影边框的外观颜色——左边和上边的阴影色*/
+  scrollbar-3dlight-color:#A2A2A3;
+  /*滚动条3d暗色阴影边框的外观颜色——右边和下边的阴影色*/
+  scrollbar-darkshadow-color: #A2A2A3;
+  /*滚动条基准颜色*/
+  scrollbar-base-color: #f4f4f5;
+}
+.el-table__body-wrapper,.el-menu{
+  /*IE下隐藏*/
+  -ms-overflow-style:none;
+}
+
+.el-table__body-wrapper:hover,.el-menu:hover{
+  /*IE下显示*/
+  -ms-overflow-style:auto;
+}
+/*IE--------------------------------------------end*/
+
